@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix protocol issues regarding sent items: do not send invisible items.
+  common/object.c
+Andreas Kirschbaum 2008-03-21
+
 Fix protocol issues regarding face caching.
   socket/request.c
 Andreas Kirschbaum 2008-03-21
